use sed to remove dist from gitignore

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: node
 script: npm run mk
 before_install:
   - npm i -g node-sass minifier
+before_deploy:
+  # patch gitignore
+  sed -i 's:dist/:d' ./.gitignore
 deploy:
   provider: pages
   skip_cleanup: true
