fix sed command

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ before_install:
   - npm i -g node-sass minifier
 before_deploy:
   # patch gitignore
-  sed -i 's:dist/:d' ./.gitignore
+  - sed -i '/dist\//d' ./.gitignore
 deploy:
   provider: pages
   skip_cleanup: true
